--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@ant-design/react-native": "^4.0.2",
     "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "dva-core": "^2.0.2",
     "expo": "~40.0.0",
     "expo-splash-screen": "~0.8.0",
     "expo-status-bar": "~1.0.3",
@@ -25,15 +25,14 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-unimodules": "~0.12.0",
     "react-native-web": "~0.13.12",
     "react-native-webrtc": "^1.87.2",
-    "socket.io-client": "^3.0.4",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "dva-core": "^2.0.2",
-    "react-native-splash-screen": "^3.2.0"
+    "socket.io-client": "^3.0.4"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
